Added some comments

--- a/Phase 2/summary statistics 2.ipynb
+++ b/Phase 2/summary statistics 2.ipynb
@@ -683,7 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate the coordinates and display it"
+    "## Calculate the coordinates and display the table"
    ]
   },
   {
@@ -976,6 +976,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Drop the \"Under 65 from diabetes (2019)\", \"Age-adjusted Hospitalizations From Or With Diabetes (2019)\", and \"Age-adjusted Deaths from Diabetes, Rate Per 100,000 Population, 2019 from Diabetes count(2019)\" columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -1224,6 +1231,13 @@
    ],
    "source": [
     "new_corrMatrix.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using Heat map to display the correlation between the variables"
    ]
   },
   {
