Remove wrong code for the Correlation matrix

--- a/Phase 2/summary statistics 2.ipynb
+++ b/Phase 2/summary statistics 2.ipynb
@@ -988,8 +988,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_corrMatrix = corrMatrix.drop(corrMatrix.columns[[11, 12, 13]], axis = 1)\n",
-    "new_corrMatrix.drop(new_corrMatrix.index[[11, 12, 13]], inplace = True)"
+    "new_corrMatrix = corrMatrix.drop(corrMatrix.columns[[11, 12, 13]], axis = 1)"
    ]
   },
   {
